// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DeploymentInfraWrapperWithRef initial render - with step template refs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main executionWidgetWrapper"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-xlarge StyledProps--margin-left-medium StyledProps--margin-right-medium"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="deploymentStepsDT"
      >
        <p
          class="StyledProps--font StyledProps--main headerText StyledProps--color StyledProps--color-black"
        >
          cd.deploymentSteps
        </p>
      </div>
      <span
        class="bp3-popover-wrapper main marginLeft"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--withRightIcon"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              addStep
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main tooltipStyle deploymentStepsCard StyledProps--margin-medium"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
          >
            cd.useStepTemplatesForYourDeploymentType
          </p>
          <div
            class="StyledProps--font StyledProps--main stepsContainer"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card paletteCard"
                data-testid="step-card-http_project_level-0"
              >
                <span
                  class="bp3-icon StyledProps--main templateLibraryIcon"
                  data-icon="template-library"
                >
                  <svg
                    height="10"
                    viewBox="0 0 12 13"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M1.8 13c.2 0 .4-.3.4-.6V.6C2.2.3 2 0 1.8 0H.4C.2 0 0 .3 0 .6v11.7c0 .4.2.7.4.7h1.4zm8.8 0l.9-.3c.3-.1.5-.4.4-.8L8.9.6C8.8.3 8.5.1 8.1.2l-.9.3c-.4 0-.5.4-.5.7l3.1 11.3c.1.4.5.6.8.5zm-5 0c.2 0 .4-.3.4-.7V.6c0-.3-.2-.6-.4-.6H4.2c-.2 0-.4.3-.4.6v11.7c0 .4.2.7.4.7h1.4z"
                        id="template-library_svg__a"
                      />
                    </defs>
                    <clippath
                      id="template-library_svg__b"
                    >
                      <use
                        overflow="visible"
                        xlink:href="#template-library_svg__a"
                      />
                    </clippath>
                    <path
                      clip-path="url(#template-library_svg__b)"
                      d="M-5-5h22v23H-5z"
                      fill="#25a6f7"
                    />
                  </svg>
                </span>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeNode Button--iconOnly Button--without-shadow Button--withLeftIcon Button--variation Button--variation-primary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-cross StyledProps--main"
                    icon="cross"
                  >
                    <svg
                      data-icon="cross"
                      height="10"
                      viewBox="0 0 16 16"
                      width="10"
                    >
                      <desc>
                        cross
                      </desc>
                      <path
                        d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="stepTemplateCardText"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                  style="--text-line-clamp: 3; width: 100px;"
                >
                  http project level
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`Test DeploymentInfraWrapperWithRef initial render - without step template refs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main executionWidgetWrapper"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--margin-top-xlarge StyledProps--margin-bottom-xlarge StyledProps--margin-left-medium StyledProps--margin-right-medium"
    >
      <div
        class="Text--withDocsTooltip"
        data-tooltip-id="deploymentStepsDT"
      >
        <p
          class="StyledProps--font StyledProps--main headerText StyledProps--color StyledProps--color-black"
        >
          cd.deploymentSteps
        </p>
      </div>
      <span
        class="bp3-popover-wrapper main marginLeft"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main addButton Button--with-current-color Button--withLeftIcon Button--withRightIcon"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              addStep
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <div
      class="Layout--vertical StyledProps--main tooltipStyle deploymentStepsCard StyledProps--margin-medium"
    >
      <div
        class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-size-small StyledProps--font-weight-semi-bold"
          >
            cd.useStepTemplatesForYourDeploymentType
          </p>
          <div
            class="StyledProps--font StyledProps--main stepsContainer"
          />
        </div>
      </div>
    </div>
    <div />
  </div>
</div>
`;
